Fixed jumping button

--- a/src/style.css
+++ b/src/style.css
@@ -102,8 +102,10 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
+  box-sizing: border-box;
   background: var(--button-color);
   border-radius: 5px;
+  border: 1px solid var(--button-color);
   height: 40px;
   font-weight: 700;
   font-size: 14px;
@@ -114,7 +116,5 @@ p {
 
 .product-card__button:hover {
   background: #fff;
-  border: 1px solid var(--button-color);
-  border-radius: 5px;
   color: var(--button-color);
 }
